--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
   "ignore": [],
   "dependencies": {
     "foundation-sites": "~6.2.0",
-    "motion-ui" : "~1.2.0",
-    "fontawesome": "~4.5.0"
+    "motion-ui": "~1.2.0",
+    "fontawesome": "~4.5.0",
+    "parallax.js": "^1.4.2"
   }
 }
